# web2PDFbook

./: .gitignore  .pre-commit-config.yaml  .pypirc  LICENSE  Makefile  README.md  book_creator.py  cli.py  config.py  crawler.py  dev-requirements.txt  main.py  merger.py  mypy.ini  pyproject.toml  pytest.ini  python_backend-contributing.md  renderer.py  requirements.txt
.github/workflows/: python-ci.yml
crawler/: __init__.py
crawler/entity/: crawl_result.py
crawler/usecase/: extract_links.py
docs/: SDLC.md
docs/✅ Phase 1: 🎯 Idea Validation & MVP Planning/: ✅ Phase 1: 🎯 Idea Validation & MVP Planning.md  📄 SRS: Software Requirements Specification for Web2PDFBook.md
docs/🔧 Phase 2: Tech Stack & Architecture Design/: Web2PDFBook – Architecture & Tech Stack.md
docs/🛠️ Phase 3: Environment Setup/: Web2pdfbook – Environment Setup.md
docs/🧩 Phase 4: MVP Implementation Plan/: ✅ Roadmap: Codex Task Breakdown for MVP.md
merger/: __init__.py
merger/adapter/: pypdf2_merger.py
privacy/: index.html
release/: publish.sh
renderer/: __init__.py
renderer/adapter/: playwright_renderer.py
renderer/entity/: renderer.py
tests/: test_cli.py  test_config.py  test_logger.py  test_main.py  test_merger.py  test_renderer.py  test_utils.py
tests/fixtures/: sample.html  test_crawler.py
tests/fixtures/structured_site/: api.html  extra.html  extra2.html  faq.html  index.html  install.html  intro.html  usage.html
tests/integration/: test_end_to_end_cli.py  test_structured_end_to_end.py
tests/usecase/: test_book_creator.py  test_extract_index_links.py  test_extract_links.py  test_merge_documents.py  test_render_to_pdf.py
usecase/: book_creator.py
web2pdfbook/: __init__.py  book_creator.py  cli.py  cli_runner.py  logger.py  main.py  utils.py
web2pdfbook/crawler/: __init__.py
web2pdfbook/crawler/usecase/: extract_index_links.py
web2pdfbook/merger/entity/: pdf_document.py
web2pdfbook/merger/usecase/: merge_documents.py
web2pdfbook/renderer/adapter/: playwright_renderer.py
web2pdfbook/renderer/entity/: renderer.py
web2pdfbook/renderer/usecase/: render_to_pdf.py
web2pdfbook/usecase/: __init__.py  book_creator.py
