[project]
name = "web2pdfbook"
version = "0.1.0"
description = "Convert website documentation into a PDF book"
readme = "README.md"
authors = [{name = "Your Name"}]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "PyPDF2",
    "playwright",
    "beautifulsoup4",
    "requests",
    "rich",
]

[project.scripts]
web2pdfbook = "web2pdfbook.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
fail_under = 85
