[project]
name = "web2pdfbook"
version = "0.1.2"
description = "Convert website documentation into a PDF book"
readme = "README.md"
authors = [{name = "Nomena Rakotoarison", email = "nomenaarison@gmail.com"}]
keywords = ["pdf", "web", "crawler", "documentation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "PyPDF2",
    "playwright",
    "beautifulsoup4",
    "requests",
    "rich",
]
[project.urls]
Source = "https://github.com/OWNER/web2PDFbook"
Issues = "https://github.com/OWNER/web2PDFbook/issues"
Homepage = "https://github.com/OWNER/web2PDFbook"

[project.scripts]
web2pdfbook = "web2pdfbook.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
fail_under = 85

[tool.setuptools]
license-files = ["LICENSE"]
[tool.setuptools.packages.find]
where = ["."]
include = ["web2pdfbook*"]
